--- a/editors/leim/Makefile
+++ b/editors/leim/Makefile
@@ -1,25 +1,31 @@
-# $NetBSD: Makefile,v 1.1.1.1 1999/12/28 14:11:22 tron Exp $
+# $NetBSD: Makefile,v 1.1.1.2 2003/04/11 01:14:11 uebayasi Exp $
 
 DISTNAME=	leim-${VERSION}
+WRKSRC=		${WRKDIR}/emacs-21.2/leim
 CATEGORIES=	editors
 MASTER_SITES=	${MASTER_SITE_GNU:=emacs/}
 DISTFILES=	emacs-${VERSION}${EXTRACT_SUFX} ${DISTNAME}${EXTRACT_SUFX}
 
 MAINTAINER=	packages@netbsd.org
 HOMEPAGE=	http://www.gnu.org/software/emacs/emacs.html
+COMMENT=	Libraries of Emacs Input Methods (for emacs21)
 
 DEPENDS+=	emacs-${VERSION}:../emacs
 
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 
-VERSION=	20.5a
-WRKSRC=		${WRKDIR}/emacs-20.5/leim
+VERSION=	21.2
 
 post-extract:
 	@${ECHO} '#!/bin/sh' >${WRKSRC}/configure
 	@${ECHO} 'cd ..' >>${WRKSRC}/configure
 	@${ECHO} 'exec ./configure $$*' >>${WRKSRC}/configure
 	@${CHMOD} +x ${WRKSRC}/configure
+
+.include "../../mk/bsd.prefs.mk"
+
+post-install:
+	@${CHOWN} -R ${ROOT_USER} ${PREFIX}/share/emacs/21.2/leim
 
 .include "../../mk/bsd.pkg.mk"
